welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
		return
                ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (vuBiscuit == false){
^